force-app/main/default/objects/EMP__c/EMP__c.object-meta.xml
<CustomObject>
    <label>EMP</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>