force-app/main/default/objects/EMP__c/fields/DEPT__c.field-meta.xml
<CustomField>
    <fullName>DEPT__c</fullName>
    <label>DEPT</label>
    <referenceTo>DEPT__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>