force-app/main/default/objects/EMP__c/fields/EMPID__c.field-meta.xml
<CustomField>
    <fullName>EMPID__c</fullName>
    <label>EMPID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>