force-app/main/default/objects/EMP__c/fields/EMPPHONE__c.field-meta.xml
<CustomField>
    <fullName>EMPPHONE__c</fullName>
    <label>EMPPHONE</label>
    <type>Phone</type>
</CustomField>